rust/message-backup/tests/res/test-cases/invalid/multiple-account-data.jsonproto
[
  {
    "version": "1",
    "backupTimeMs": "1705692409729"
  },
  {
    "recipient": {
      "id": "1",
      "self": {}
    }
  },
  {
    "account": {
      "profileKey": "YQKRq+3DQklInaOaMcmlzZnN0m/1hzLiaONX7gB12dg=",
      "accountSettings": {
        "phoneNumberSharingMode": "NOBODY"
      }
    }
  },
  {
    "account": {
      "profileKey": "YQKRq+3DQklInaOaMcmlzZnN0m/1hzLiaONX7gB12dg=",
      "accountSettings": {
        "phoneNumberSharingMode": "NOBODY"
      }
    }
  }
]
